--- a/twitterweek3/Base.lproj/Main.storyboard
+++ b/twitterweek3/Base.lproj/Main.storyboard
@@ -43,7 +43,7 @@
             </objects>
             <point key="canvasLocation" x="140" y="137.18140929535232"/>
         </scene>
-        <!--Tweets View Controller-->
+        <!--Home-->
         <scene sceneID="NfQ-TS-t4y">
             <objects>
                 <viewController id="A44-qJ-LOb" customClass="TweetsViewController" customModule="twitterweek3" customModuleProvider="target" sceneMemberID="viewController">
@@ -97,22 +97,33 @@
                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="reply" translatesAutoresizingMaskIntoConstraints="NO" id="THy-EK-5Dl">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="reply" translatesAutoresizingMaskIntoConstraints="NO" id="THy-EK-5Dl">
                                                     <rect key="frame" x="107.5" y="108" width="24" height="18"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="24" id="2HB-fs-jeh"/>
+                                                        <constraint firstAttribute="height" constant="18" id="5ED-rU-gqC"/>
+                                                    </constraints>
                                                 </imageView>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="emptystar" translatesAutoresizingMaskIntoConstraints="NO" id="sMu-2n-yWv">
                                                     <rect key="frame" x="295" y="106" width="25" height="24"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="25" id="IFR-yj-2a9"/>
+                                                        <constraint firstAttribute="height" constant="24" id="JWy-XD-lCt"/>
+                                                    </constraints>
                                                 </imageView>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="retweet" translatesAutoresizingMaskIntoConstraints="NO" id="7Fg-Iy-Vpj">
-                                                    <rect key="frame" x="198" y="106" width="28" height="15"/>
+                                                    <rect key="frame" x="198" y="106" width="28" height="24"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="28" id="O4A-Q7-ldl"/>
+                                                        <constraint firstAttribute="height" constant="24" id="QMe-Wo-oIC"/>
+                                                    </constraints>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="THy-EK-5Dl" firstAttribute="top" secondItem="V35-7r-Nuf" secondAttribute="bottom" constant="40" id="0Q0-nB-bkW"/>
+                                                <constraint firstItem="THy-EK-5Dl" firstAttribute="top" secondItem="V35-7r-Nuf" secondAttribute="bottom" constant="42" id="0Q0-nB-bkW"/>
                                                 <constraint firstItem="V35-7r-Nuf" firstAttribute="top" secondItem="1qu-dE-VpG" secondAttribute="bottom" constant="12" id="22J-KN-tm9"/>
                                                 <constraint firstItem="Yyg-a9-4O7" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="1qu-dE-VpG" secondAttribute="trailing" constant="8" id="3RA-vx-tgp"/>
                                                 <constraint firstAttribute="trailing" secondItem="sMu-2n-yWv" secondAttribute="trailing" constant="55" id="AWP-M8-00y"/>
-                                                <constraint firstItem="7Fg-Iy-Vpj" firstAttribute="centerX" secondItem="THy-EK-5Dl" secondAttribute="centerX" constant="92" id="B4Z-Uy-w8T"/>
                                                 <constraint firstItem="1qu-dE-VpG" firstAttribute="leading" secondItem="lDT-lk-AaS" secondAttribute="trailing" constant="12.5" id="BGR-2T-cwJ"/>
                                                 <constraint firstItem="7Fg-Iy-Vpj" firstAttribute="top" secondItem="1qu-dE-VpG" secondAttribute="bottom" constant="73" id="GAH-5e-ejf"/>
                                                 <constraint firstAttribute="trailing" secondItem="Yyg-a9-4O7" secondAttribute="trailing" constant="10" id="Rdc-OU-IzO"/>
@@ -120,9 +131,10 @@
                                                 <constraint firstItem="lDT-lk-AaS" firstAttribute="leading" secondItem="sQv-4M-TU7" secondAttribute="trailing" constant="10" id="aDb-12-xVq"/>
                                                 <constraint firstItem="V35-7r-Nuf" firstAttribute="leading" secondItem="sQv-4M-TU7" secondAttribute="trailing" constant="10" id="abq-DP-pLP"/>
                                                 <constraint firstItem="sQv-4M-TU7" firstAttribute="leading" secondItem="JhI-58-IMh" secondAttribute="leading" constant="10" id="fPV-ke-T4V"/>
-                                                <constraint firstItem="sMu-2n-yWv" firstAttribute="centerX" secondItem="THy-EK-5Dl" secondAttribute="centerX" constant="188" id="gro-2L-ILh"/>
+                                                <constraint firstItem="sMu-2n-yWv" firstAttribute="leading" secondItem="7Fg-Iy-Vpj" secondAttribute="trailing" constant="69" id="hAv-dh-XSJ"/>
                                                 <constraint firstItem="sQv-4M-TU7" firstAttribute="top" secondItem="JhI-58-IMh" secondAttribute="top" constant="12" id="hH5-DJ-T8k"/>
                                                 <constraint firstItem="Yyg-a9-4O7" firstAttribute="top" secondItem="JhI-58-IMh" secondAttribute="top" constant="12" id="kdA-k1-Y4x"/>
+                                                <constraint firstItem="7Fg-Iy-Vpj" firstAttribute="leading" secondItem="THy-EK-5Dl" secondAttribute="trailing" constant="66.5" id="lQT-ul-x8l"/>
                                                 <constraint firstItem="sMu-2n-yWv" firstAttribute="top" secondItem="JhI-58-IMh" secondAttribute="top" constant="106" id="ooK-rb-1H6"/>
                                                 <constraint firstItem="lDT-lk-AaS" firstAttribute="top" secondItem="JhI-58-IMh" secondAttribute="top" constant="12" id="r4U-Yl-I4a"/>
                                             </constraints>
@@ -133,6 +145,7 @@
                                             <outlet property="nameLabel" destination="lDT-lk-AaS" id="Jwd-Wy-uvB"/>
                                             <outlet property="profileImg" destination="sQv-4M-TU7" id="4Lf-aS-p03"/>
                                             <outlet property="timeLabel" destination="Yyg-a9-4O7" id="spU-No-TpT"/>
+                                            <segue destination="5sT-4X-smS" kind="presentation" id="T9J-AN-2Ws"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -146,7 +159,7 @@
                             <constraint firstItem="GAh-23-SMw" firstAttribute="top" secondItem="Awd-pV-4ya" secondAttribute="bottom" id="oYG-Sa-rBj"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="jBe-wV-L69">
+                    <navigationItem key="navigationItem" title="Home" id="jBe-wV-L69">
                         <barButtonItem key="leftBarButtonItem" title="Logout" id="Zz4-U1-whV">
                             <connections>
                                 <action selector="onLogoutButton:" destination="A44-qJ-LOb" id="gtP-Mj-sGM"/>
@@ -154,7 +167,7 @@
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="New" id="YfP-P8-ebT">
                             <connections>
-                                <segue destination="5sT-4X-smS" kind="presentation" id="eEW-5Q-xMO"/>
+                                <segue destination="NGO-TE-52E" kind="presentation" id="T80-pr-rvU"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -163,7 +176,7 @@
             </objects>
             <point key="canvasLocation" x="1850.4000000000001" y="132.68365817091455"/>
         </scene>
-        <!--Detail View Controller-->
+        <!--Tweet-->
         <scene sceneID="SPE-7o-6yT">
             <objects>
                 <viewController id="adE-k7-RlA" customClass="DetailViewController" customModule="twitterweek3" customModuleProvider="target" sceneMemberID="viewController">
@@ -304,7 +317,10 @@
                             <constraint firstItem="whR-LY-fRI" firstAttribute="leading" secondItem="Csn-Zz-2kD" secondAttribute="leading" id="iJ7-CG-ifE"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="Q3k-3B-455"/>
+                    <navigationItem key="navigationItem" title="Tweet" id="Q3k-3B-455">
+                        <barButtonItem key="leftBarButtonItem" title="Home" id="JUM-Am-h7G"/>
+                        <barButtonItem key="rightBarButtonItem" title="Reply" id="Bux-gV-dKE"/>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WrC-WK-q3M" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -345,6 +361,76 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="448-fL-YOM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2599.1999999999998" y="111.0944527736132"/>
+        </scene>
+        <!--New Tweet Cell-->
+        <scene sceneID="J7n-ki-Ga3">
+            <objects>
+                <viewController id="0TA-Oa-90s" customClass="NewTweetCell" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="3h9-gw-aCI"/>
+                        <viewControllerLayoutGuide type="bottom" id="I1k-cG-EXR"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="AIp-JJ-Ag4">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="463" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="bgw-De-0Ja">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="NewTweetCell" rowHeight="463" id="72w-vU-2QF" customClass="NewTweetCell" customModule="twitterweek3" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="463"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="72w-vU-2QF" id="PBw-H3-N4g">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="462"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Hi there" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I9x-iJ-KOP">
+                                                    <rect key="frame" x="60" y="96" width="61" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Img-IY-tUg">
+                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="7Ll-Oi-C9n">
+                            <connections>
+                                <action selector="onCancel:" destination="0TA-Oa-90s" id="c83-f3-lJ0"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="Tweet" id="ZeM-fI-5Y2"/>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EyM-NT-niv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3365.5999999999999" y="968.36581709145435"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="U8M-Ot-UgH">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="NGO-TE-52E" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Kif-3m-524">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="0TA-Oa-90s" kind="relationship" relationship="rootViewController" id="u7C-a8-09l"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UM4-4v-4Fp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2598" y="970"/>
         </scene>
     </scenes>
     <resources>
