--- a/twitterweek3/Base.lproj/Main.storyboard
+++ b/twitterweek3/Base.lproj/Main.storyboard
@@ -73,21 +73,21 @@
                                                         <constraint firstAttribute="width" constant="85" id="fK6-Zo-VUo"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Vixx" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lDT-lk-AaS">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="752" text="Vixx" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lDT-lk-AaS">
                                                     <rect key="frame" x="105" y="12" width="36" height="21"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@vixxku" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1qu-dE-VpG">
-                                                    <rect key="frame" x="154" y="12" width="56.5" height="18"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" misplaced="YES" text="@vixxku" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1qu-dE-VpG">
+                                                    <rect key="frame" x="154" y="9" width="50" height="29.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V35-7r-Nuf">
-                                                    <rect key="frame" x="105" y="42" width="262" height="63"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Description" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V35-7r-Nuf">
+                                                    <rect key="frame" x="105" y="53.5" width="262" height="63"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -98,21 +98,21 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="reply" translatesAutoresizingMaskIntoConstraints="NO" id="THy-EK-5Dl">
-                                                    <rect key="frame" x="107.5" y="105" width="24" height="18"/>
+                                                    <rect key="frame" x="108" y="116" width="24" height="18"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="24" id="2HB-fs-jeh"/>
                                                         <constraint firstAttribute="height" constant="18" id="5ED-rU-gqC"/>
                                                     </constraints>
                                                 </imageView>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="emptystar" translatesAutoresizingMaskIntoConstraints="NO" id="sMu-2n-yWv">
-                                                    <rect key="frame" x="295" y="106" width="25" height="24"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="emptystar" translatesAutoresizingMaskIntoConstraints="NO" id="sMu-2n-yWv">
+                                                    <rect key="frame" x="295" y="98" width="25" height="24"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="25" id="IFR-yj-2a9"/>
                                                         <constraint firstAttribute="height" constant="24" id="JWy-XD-lCt"/>
                                                     </constraints>
                                                 </imageView>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="retweet" translatesAutoresizingMaskIntoConstraints="NO" id="7Fg-Iy-Vpj">
-                                                    <rect key="frame" x="198" y="103" width="28" height="24"/>
+                                                    <rect key="frame" x="198" y="114" width="28" height="24"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="28" id="O4A-Q7-ldl"/>
                                                         <constraint firstAttribute="height" constant="24" id="QMe-Wo-oIC"/>
@@ -121,16 +121,15 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="THy-EK-5Dl" firstAttribute="top" secondItem="V35-7r-Nuf" secondAttribute="bottom" id="0Q0-nB-bkW"/>
-                                                <constraint firstItem="V35-7r-Nuf" firstAttribute="top" secondItem="1qu-dE-VpG" secondAttribute="bottom" constant="12" id="22J-KN-tm9"/>
+                                                <constraint firstItem="V35-7r-Nuf" firstAttribute="top" secondItem="1qu-dE-VpG" secondAttribute="bottom" constant="15" id="22J-KN-tm9"/>
                                                 <constraint firstItem="Yyg-a9-4O7" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="1qu-dE-VpG" secondAttribute="trailing" constant="8" id="3RA-vx-tgp"/>
                                                 <constraint firstAttribute="trailing" secondItem="sMu-2n-yWv" secondAttribute="trailing" constant="55" id="AWP-M8-00y"/>
                                                 <constraint firstItem="1qu-dE-VpG" firstAttribute="leading" secondItem="lDT-lk-AaS" secondAttribute="trailing" constant="12.5" id="BGR-2T-cwJ"/>
                                                 <constraint firstAttribute="bottom" secondItem="7Fg-Iy-Vpj" secondAttribute="bottom" id="CgS-h8-pTQ"/>
-                                                <constraint firstItem="7Fg-Iy-Vpj" firstAttribute="top" secondItem="1qu-dE-VpG" secondAttribute="bottom" constant="73" id="GAH-5e-ejf"/>
                                                 <constraint firstAttribute="trailing" secondItem="V35-7r-Nuf" secondAttribute="trailing" constant="8" id="Jjy-7b-cSU"/>
                                                 <constraint firstAttribute="bottom" secondItem="sMu-2n-yWv" secondAttribute="bottom" id="POd-uq-9KJ"/>
                                                 <constraint firstAttribute="trailing" secondItem="Yyg-a9-4O7" secondAttribute="trailing" constant="10" id="Rdc-OU-IzO"/>
-                                                <constraint firstItem="1qu-dE-VpG" firstAttribute="top" secondItem="JhI-58-IMh" secondAttribute="top" constant="12" id="XZ7-nI-kxh"/>
+                                                <constraint firstItem="1qu-dE-VpG" firstAttribute="top" secondItem="JhI-58-IMh" secondAttribute="top" constant="9" id="XZ7-nI-kxh"/>
                                                 <constraint firstItem="lDT-lk-AaS" firstAttribute="leading" secondItem="sQv-4M-TU7" secondAttribute="trailing" constant="10" id="aDb-12-xVq"/>
                                                 <constraint firstItem="V35-7r-Nuf" firstAttribute="leading" secondItem="sQv-4M-TU7" secondAttribute="trailing" constant="10" id="abq-DP-pLP"/>
                                                 <constraint firstItem="sQv-4M-TU7" firstAttribute="leading" secondItem="JhI-58-IMh" secondAttribute="leading" constant="10" id="fPV-ke-T4V"/>
@@ -138,7 +137,6 @@
                                                 <constraint firstItem="sQv-4M-TU7" firstAttribute="top" secondItem="JhI-58-IMh" secondAttribute="top" constant="12" id="hH5-DJ-T8k"/>
                                                 <constraint firstItem="Yyg-a9-4O7" firstAttribute="top" secondItem="JhI-58-IMh" secondAttribute="top" constant="12" id="kdA-k1-Y4x"/>
                                                 <constraint firstItem="7Fg-Iy-Vpj" firstAttribute="leading" secondItem="THy-EK-5Dl" secondAttribute="trailing" constant="66.5" id="lQT-ul-x8l"/>
-                                                <constraint firstItem="sMu-2n-yWv" firstAttribute="top" secondItem="JhI-58-IMh" secondAttribute="top" constant="106" id="ooK-rb-1H6"/>
                                                 <constraint firstItem="lDT-lk-AaS" firstAttribute="top" secondItem="JhI-58-IMh" secondAttribute="top" constant="12" id="r4U-Yl-I4a"/>
                                                 <constraint firstAttribute="bottom" secondItem="THy-EK-5Dl" secondAttribute="bottom" constant="4" id="sJ7-ss-L5b"/>
                                             </constraints>
@@ -185,7 +183,7 @@
         <!--Tweet-->
         <scene sceneID="SPE-7o-6yT">
             <objects>
-                <viewController id="adE-k7-RlA" customClass="DetailViewController" customModule="twitterweek3" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="DetailViewController" id="adE-k7-RlA" customClass="DetailViewController" customModule="twitterweek3" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="nna-Pf-sba"/>
                         <viewControllerLayoutGuide type="bottom" id="3hT-Nm-Lb6"/>
@@ -324,7 +322,11 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Tweet" id="Q3k-3B-455">
-                        <barButtonItem key="leftBarButtonItem" title="Home" id="JUM-Am-h7G"/>
+                        <barButtonItem key="leftBarButtonItem" title="Home" id="JUM-Am-h7G">
+                            <connections>
+                                <action selector="onHomeButton:" destination="adE-k7-RlA" id="0ok-nL-L5n"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Reply" id="Bux-gV-dKE"/>
                     </navigationItem>
                     <connections>
